// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Groups should compile basic module index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../modules.md) / basic

# basic

A basic module

## Index

### Enumerations

| Enumeration | Description |
| :------ | :------ |
| [EnumA](enumerations/EnumA.md) | EnumA function. |
| [EnumB](enumerations/EnumB.md) | - |

### Classes

| Class | Description |
| :------ | :------ |
| [ClassA](classes/ClassA.md) | ClassA function. |
| [ClassB](classes/ClassB.md) | - |

### Interfaces

| Interface | Description |
| :------ | :------ |
| [InterfaceA](interfaces/InterfaceA.md) | Interface A comments line 1 and comments on a soft line. |
| [InterfaceB](interfaces/InterfaceB.md) | InterfaceB function. |

### Type Aliases

| Type alias | Description |
| :------ | :------ |
| [TypeA](type-aliases/TypeA.md) | TypeA function. |
| [TypeB](type-aliases/TypeB.md) | TypeB function. |

### Variables

| Variable | Description |
| :------ | :------ |
| [variableA](variables/variableA.md) | - |
| [variableB](variables/variableB.md) | - |

### Functions

| Function | Description |
| :------ | :------ |
| [functionA](functions/functionA.md) | Create a function. |
"
`;

exports[`Groups should compile basic module index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../index.md) / basic

# basic

A basic module

## Index

### Enumerations

<table>
<thead>
<tr>
<th align="left">Enumeration</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[EnumA](enumerations/EnumA.md)

</td>
<td>

EnumA function.

</td>
</tr>
<tr>
<td>

[EnumB](enumerations/EnumB.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Classes

<table>
<thead>
<tr>
<th align="left">Class</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[ClassA](classes/ClassA.md)

</td>
<td>

ClassA function.

</td>
</tr>
<tr>
<td>

[ClassB](classes/ClassB.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Interfaces

<table>
<thead>
<tr>
<th align="left">Interface</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[InterfaceA](interfaces/InterfaceA.md)

</td>
<td>

Interface A comments line 1
and comments on a soft line.

Comments on double new line.

\`\`\`typescript
const a = new InterfaceA();
\`\`\`

**Remarks**

Block tag content.

</td>
</tr>
<tr>
<td>

[InterfaceB](interfaces/InterfaceB.md)

</td>
<td>

InterfaceB function.

</td>
</tr>
</tbody>
</table>

### Type Aliases

<table>
<thead>
<tr>
<th align="left">Type alias</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[TypeA](type-aliases/TypeA.md)

</td>
<td>

TypeA function.

</td>
</tr>
<tr>
<td>

[TypeB](type-aliases/TypeB.md)

</td>
<td>

TypeB function.

</td>
</tr>
</tbody>
</table>

### Functions

<table>
<thead>
<tr>
<th align="left">Function</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[functionA](functions/functionA.md)

</td>
<td>

Create a function.

More summary.

</td>
</tr>
</tbody>
</table>

<a id="variablea" name="variablea"></a>

## variableA

_DECLARATION_MEMBER_PARTIAL_

***

<a id="variableb" name="variableb"></a>

## variableB

_DECLARATION_MEMBER_PARTIAL_
"
`;

exports[`Groups should compile basic module index page: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[**typedoc-stubs**](index.md) • **Docs**

***

[typedoc-stubs](modules.md) / basic

# basic

A basic module

## Enumerations

### EnumA

EnumA function.

***

### EnumB

## Classes

### ClassA

ClassA function.

#### Constructors

##### new ClassA()

_SIGNATURE_MEMBER_PARTIAL_

***

### ClassB

#### Constructors

##### new ClassB()

_SIGNATURE_MEMBER_PARTIAL_

## Interfaces

### InterfaceA

Interface A comments line 1
and comments on a soft line.

Comments on double new line.

\`\`\`typescript
const a = new InterfaceA();
\`\`\`

#### Remarks

Block tag content.

#### Properties

##### propA

_DECLARATION_MEMBER_PARTIAL_

##### propB

_DECLARATION_MEMBER_PARTIAL_

***

### InterfaceB

InterfaceB function.

## Type Aliases

### TypeA

_DECLARATION_MEMBER_PARTIAL_

***

### TypeB()

_DECLARATION_MEMBER_PARTIAL_

## Variables

### variableA

_DECLARATION_MEMBER_PARTIAL_

***

### variableB

_DECLARATION_MEMBER_PARTIAL_

## Functions

### functionA()

_SIGNATURE_MEMBER_PARTIAL_
"
`;

exports[`Groups should compile basic module index page: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[**typedoc-stubs**](index.md) • **Docs**

***

[typedoc-stubs](index.md) / basic

# basic

A basic module

<a id="enuma" name="enuma"></a>

## EnumA

EnumA function.

***

<a id="enumb" name="enumb"></a>

## EnumB

***

<a id="classa" name="classa"></a>

## ClassA

ClassA function.

### Constructors

<a id="constructors" name="constructors"></a>

#### new ClassA()

_SIGNATURE_MEMBER_PARTIAL_

***

<a id="classb" name="classb"></a>

## ClassB

### Constructors

<a id="constructors-1" name="constructors-1"></a>

#### new ClassB()

_SIGNATURE_MEMBER_PARTIAL_

***

<a id="interfacea" name="interfacea"></a>

## InterfaceA

Interface A comments line 1
and comments on a soft line.

Comments on double new line.

\`\`\`typescript
const a = new InterfaceA();
\`\`\`

### Remarks

Block tag content.

### Properties

<a id="propa" name="propa"></a>

#### propA

_DECLARATION_MEMBER_PARTIAL_

<a id="propb" name="propb"></a>

#### propB

_DECLARATION_MEMBER_PARTIAL_

***

<a id="interfaceb" name="interfaceb"></a>

## InterfaceB

InterfaceB function.

***

<a id="typea" name="typea"></a>

## TypeA

_DECLARATION_MEMBER_PARTIAL_

***

<a id="typeb" name="typeb"></a>

## TypeB()

_DECLARATION_MEMBER_PARTIAL_

***

<a id="variablea" name="variablea"></a>

## variableA

_DECLARATION_MEMBER_PARTIAL_

***

<a id="variableb" name="variableb"></a>

## variableB

_DECLARATION_MEMBER_PARTIAL_

***

<a id="functiona" name="functiona"></a>

## functionA()

_SIGNATURE_MEMBER_PARTIAL_
"
`;

exports[`Groups should compile categories group page: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[**typedoc-stubs**](index.md) • **Docs**

***

[typedoc-stubs](modules.md) / has-categories

# has-categories

A module that contains categories

## Enumerations

### Category A

#### CategoryAEnum1

***

#### CategoryAEnum2

### Category B

#### CategoryBEnum1

***

#### CategoryBEnum2

### Other

#### UnCategorizedEnum

## Interfaces

### Category A

#### CategoryAInterface1

***

#### CategoryAInterface2

### Category B

#### CategoryBInterface1

***

#### CategoryBInterface2

### Category C

#### CategoryCInterface1

### Other

#### CategoryCInterface2

***

#### UnCategorizedInterace
"
`;

exports[`Groups should compile categories group page: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[**typedoc-stubs**](index.md) • **Docs**

***

[typedoc-stubs](index.md) / has-categories

# has-categories

A module that contains categories

## Category A

<a id="categoryaenum1" name="categoryaenum1"></a>

### CategoryAEnum1

***

<a id="categoryaenum2" name="categoryaenum2"></a>

### CategoryAEnum2

***

<a id="categoryainterface1" name="categoryainterface1"></a>

### CategoryAInterface1

***

<a id="categoryainterface2" name="categoryainterface2"></a>

### CategoryAInterface2

## Category B

<a id="categorybenum1" name="categorybenum1"></a>

### CategoryBEnum1

***

<a id="categorybenum2" name="categorybenum2"></a>

### CategoryBEnum2

***

<a id="categorybinterface1" name="categorybinterface1"></a>

### CategoryBInterface1

***

<a id="categorybinterface2" name="categorybinterface2"></a>

### CategoryBInterface2

## Category C

<a id="categorycinterface1" name="categorycinterface1"></a>

### CategoryCInterface1

## Other

<a id="uncategorizedenum" name="uncategorizedenum"></a>

### UnCategorizedEnum

***

<a id="categorycinterface2" name="categorycinterface2"></a>

### CategoryCInterface2

***

<a id="uncategorizedinterace" name="uncategorizedinterace"></a>

### UnCategorizedInterace
"
`;

exports[`Groups should compile categories index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../modules.md) / has-categories

# has-categories

A module that contains categories

## Index

### Enumerations

#### Category A

| Enumeration | Description |
| :------ | :------ |
| [CategoryAEnum1](enumerations/CategoryAEnum1.md) | - |
| [CategoryAEnum2](enumerations/CategoryAEnum2.md) | - |

#### Category B

| Enumeration | Description |
| :------ | :------ |
| [CategoryBEnum1](enumerations/CategoryBEnum1.md) | - |
| [CategoryBEnum2](enumerations/CategoryBEnum2.md) | - |

#### Other

| Enumeration | Description |
| :------ | :------ |
| [UnCategorizedEnum](enumerations/UnCategorizedEnum.md) | - |

### Interfaces

#### Category A

| Interface | Description |
| :------ | :------ |
| [CategoryAInterface1](interfaces/CategoryAInterface1.md) | - |
| [CategoryAInterface2](interfaces/CategoryAInterface2.md) | - |

#### Category B

| Interface | Description |
| :------ | :------ |
| [CategoryBInterface1](interfaces/CategoryBInterface1.md) | - |
| [CategoryBInterface2](interfaces/CategoryBInterface2.md) | - |

#### Category C

| Interface | Description |
| :------ | :------ |
| [CategoryCInterface1](interfaces/CategoryCInterface1.md) | - |

#### Other

| Interface | Description |
| :------ | :------ |
| [CategoryCInterface2](interfaces/CategoryCInterface2.md) | - |
| [UnCategorizedInterace](interfaces/UnCategorizedInterace.md) | - |
"
`;

exports[`Groups should compile categories index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../index.md) / has-categories

# has-categories

A module that contains categories

## Index

### Category A

<table>
<thead>
<tr>
<th align="left">Enumeration, Interface</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[CategoryAEnum1](enumerations/CategoryAEnum1.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[CategoryAEnum2](enumerations/CategoryAEnum2.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[CategoryAInterface1](interfaces/CategoryAInterface1.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[CategoryAInterface2](interfaces/CategoryAInterface2.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Category B

<table>
<thead>
<tr>
<th align="left">Enumeration, Interface</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[CategoryBEnum1](enumerations/CategoryBEnum1.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[CategoryBEnum2](enumerations/CategoryBEnum2.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[CategoryBInterface1](interfaces/CategoryBInterface1.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[CategoryBInterface2](interfaces/CategoryBInterface2.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Category C

<table>
<thead>
<tr>
<th align="left">Interface</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[CategoryCInterface1](interfaces/CategoryCInterface1.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Other

<table>
<thead>
<tr>
<th align="left">Enumeration, Interface</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[UnCategorizedEnum](enumerations/UnCategorizedEnum.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[CategoryCInterface2](interfaces/CategoryCInterface2.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[UnCategorizedInterace](interfaces/UnCategorizedInterace.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>
"
`;

exports[`Groups should compile custom groups index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../modules.md) / has-custom-groups

# has-custom-groups

A module that contains custom groupings

## Index

### Variables

| Variable | Description |
| :------ | :------ |
| [variableC](variables/variableC.md) | Default grouping |

### CustomGroupA

| Variable | Description |
| :------ | :------ |
| [variabelA](variables/variabelA.md) | - |

### CustomGroupB

| Variable | Description |
| :------ | :------ |
| [variableB1](variables/variableB1.md) | - |
| [variableB2](variables/variableB2.md) | - |
"
`;

exports[`Groups should compile custom groups index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../index.md) / has-custom-groups

# has-custom-groups

A module that contains custom groupings

<a id="variabela" name="variabela"></a>

## variabelA

_DECLARATION_MEMBER_PARTIAL_

***

<a id="variableb1" name="variableb1"></a>

## variableB1

_DECLARATION_MEMBER_PARTIAL_

***

<a id="variableb2" name="variableb2"></a>

## variableB2

_DECLARATION_MEMBER_PARTIAL_

***

<a id="variablec" name="variablec"></a>

## variableC

_DECLARATION_MEMBER_PARTIAL_
"
`;

exports[`Groups should compile index page for project: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**typedoc-stubs**](index.md) • **Docs**

***

# typedoc-stubs

## Modules

| Module | Description |
| :------ | :------ |
| [\\<internal\\>](-internal-/index.md) | - |
| [42-module-name](42-module-name/index.md) | - |
| [basic](basic/index.md) | A basic module |
| [has-categories](has-categories/index.md) | A module that contains categories |
| [has-custom-groups](has-custom-groups/index.md) | A module that contains custom groupings |
| [has-namespaces](has-namespaces/index.md) | A module that contains namespaces |
| [has-references](has-references/index.md) | A module that contains references |
| [has-same-exports](has-same-exports/index.md) | - |
| [index](index/index.md) | A module named index |
"
`;

exports[`Groups should compile index page for project: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • **Docs**

***

# typedoc-stubs

## Modules

<table>
<thead>
<tr>
<th align="left">Module</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[\\<internal\\>](-internal-/index.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[42-module-name](42-module-name/index.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[basic](basic/index.md)

</td>
<td>

A basic module

</td>
</tr>
<tr>
<td>

[has-categories](has-categories/index.md)

</td>
<td>

A module that contains categories

</td>
</tr>
<tr>
<td>

[has-custom-groups](has-custom-groups/index.md)

</td>
<td>

A module that contains custom groupings

</td>
</tr>
<tr>
<td>

[has-namespaces](has-namespaces/index.md)

</td>
<td>

A module that contains namespaces

</td>
</tr>
<tr>
<td>

[has-references](has-references/index.md)

</td>
<td>

A module that contains references

</td>
</tr>
<tr>
<td>

[has-same-exports](has-same-exports/index.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[index](index/index.md)

</td>
<td>

A module named index

</td>
</tr>
</tbody>
</table>
"
`;

exports[`Groups should compile index page for project: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[**typedoc-stubs**](index.md) • **Docs**

***

# typedoc-stubs

## Modules

| Module | Description |
| :------ | :------ |
| [\\<internal\\>](-internal-.md) | - |
| [42-module-name](42-module-name.md) | - |
| [basic](basic.md) | A basic module |
| [has-categories](has-categories.md) | A module that contains categories |
| [has-custom-groups](has-custom-groups.md) | A module that contains custom groupings |
| [has-namespaces](has-namespaces/index.md) | A module that contains namespaces |
| [has-references](has-references.md) | A module that contains references |
| [has-same-exports](has-same-exports.md) | - |
| [index](module_index.md) | A module named index |
"
`;

exports[`Groups should compile index page for project: (Output File Strategy "modules") (Option Group "2") 1`] = `
"**typedoc-stubs** • **Docs**

***

# typedoc-stubs

## Modules

<table>
<thead>
<tr>
<th align="left">Module</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[\\<internal\\>](-internal-.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[42-module-name](42-module-name.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[basic](basic.md)

</td>
<td>

A basic module

</td>
</tr>
<tr>
<td>

[has-categories](has-categories.md)

</td>
<td>

A module that contains categories

</td>
</tr>
<tr>
<td>

[has-custom-groups](has-custom-groups.md)

</td>
<td>

A module that contains custom groupings

</td>
</tr>
<tr>
<td>

[has-namespaces](has-namespaces/index.md)

</td>
<td>

A module that contains namespaces

</td>
</tr>
<tr>
<td>

[has-references](has-references.md)

</td>
<td>

A module that contains references

</td>
</tr>
<tr>
<td>

[has-same-exports](has-same-exports.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[index](module_index.md)

</td>
<td>

A module named index

</td>
</tr>
</tbody>
</table>
"
`;

exports[`Groups should compile module index for a namespace: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**typedoc-stubs**](../../../index.md) • **Docs**

***

[typedoc-stubs](../../../modules.md) / [has-namespaces](../../index.md) / \\_Namespace\\_A\\_

# \\_Namespace\\_A\\_

## Index

### Namespaces

| Namespace | Description |
| :------ | :------ |
| [NestedNamespace](namespaces/NestedNamespace/index.md) | - |

### Interfaces

| Interface | Description |
| :------ | :------ |
| [NamespaceInterface](interfaces/NamespaceInterface.md) | - |
"
`;

exports[`Groups should compile module index for a namespace: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**typedoc-stubs**](../../../index.md) • **Docs**

***

[typedoc-stubs](../../../index.md) / [has-namespaces](../../index.md) / \\_Namespace\\_A\\_

# \\_Namespace\\_A\\_

## Index

### Namespaces

<table>
<thead>
<tr>
<th align="left">Namespace</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[NestedNamespace](namespaces/NestedNamespace/index.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Interfaces

<table>
<thead>
<tr>
<th align="left">Interface</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[NamespaceInterface](interfaces/NamespaceInterface.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>
"
`;

exports[`Groups should compile module index for a namespace: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[**typedoc-stubs**](../../../index.md) • **Docs**

***

[typedoc-stubs](../../../modules.md) / [has-namespaces](../../index.md) / \\_Namespace\\_A\\_

# \\_Namespace\\_A\\_

## Index

### Namespaces

| Namespace | Description |
| :------ | :------ |
| [NestedNamespace](namespaces/NestedNamespace.md) | - |

## Interfaces

### NamespaceInterface
"
`;

exports[`Groups should compile module index for a namespace: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[**typedoc-stubs**](../../../index.md) • **Docs**

***

[typedoc-stubs](../../../index.md) / [has-namespaces](../../index.md) / \\_Namespace\\_A\\_

# \\_Namespace\\_A\\_

## Index

### Namespaces

<table>
<thead>
<tr>
<th align="left">Namespace</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[NestedNamespace](namespaces/NestedNamespace.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

<a id="namespaceinterface" name="namespaceinterface"></a>

## NamespaceInterface
"
`;

exports[`Groups should compile module index with namespaces index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../modules.md) / has-namespaces

# has-namespaces

A module that contains namespaces

## Index

### Namespaces

| Namespace | Description |
| :------ | :------ |
| [\\_Namespace\\_A\\_](namespaces/Namespace_A/index.md) | - |
| [NamespaceB](namespaces/NamespaceB/index.md) | - |

### Enumerations

| Enumeration | Description |
| :------ | :------ |
| [\\_Enum\\_A\\_](enumerations/Enum_A.md) | - |
| [EnumB](enumerations/EnumB.md) | - |

### Classes

| Class | Description |
| :------ | :------ |
| [\\_\\_Class\\_A\\_](classes/Class_A.md) | - |
| [ClassB](classes/ClassB.md) | - |

### Interfaces

| Interface | Description |
| :------ | :------ |
| [\\_Interface\\_A\\_](interfaces/Interface_A.md) | - |
| [InterfaceB](interfaces/InterfaceB.md) | - |

### Type Aliases

| Type alias | Description |
| :------ | :------ |
| [\\_Type\\_A\\_](type-aliases/Type_A.md) | - |
| [TypeB](type-aliases/TypeB.md) | - |

### Variables

| Variable | Description |
| :------ | :------ |
| [\\_variable\\_A\\_](variables/variable_A.md) | - |
| [variableB](variables/variableB.md) | - |

### Functions

| Function | Description |
| :------ | :------ |
| [\\_function\\_A\\_](functions/function_A.md) | - |
| [functionB](functions/functionB.md) | - |
"
`;

exports[`Groups should compile module index with namespaces index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../index.md) / has-namespaces

# has-namespaces

A module that contains namespaces

## Index

### Namespaces

<table>
<thead>
<tr>
<th align="left">Namespace</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[\\_Namespace\\_A\\_](namespaces/Namespace_A/index.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[NamespaceB](namespaces/NamespaceB/index.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Enumerations

<table>
<thead>
<tr>
<th align="left">Enumeration</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[\\_Enum\\_A\\_](enumerations/Enum_A.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[EnumB](enumerations/EnumB.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Classes

<table>
<thead>
<tr>
<th align="left">Class</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[\\_\\_Class\\_A\\_](classes/Class_A.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[ClassB](classes/ClassB.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Interfaces

<table>
<thead>
<tr>
<th align="left">Interface</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[\\_Interface\\_A\\_](interfaces/Interface_A.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[InterfaceB](interfaces/InterfaceB.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Type Aliases

<table>
<thead>
<tr>
<th align="left">Type alias</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[\\_Type\\_A\\_](type-aliases/Type_A.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[TypeB](type-aliases/TypeB.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

### Functions

<table>
<thead>
<tr>
<th align="left">Function</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[\\_function\\_A\\_](functions/function_A.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[functionB](functions/functionB.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

<a id="_variable_a_" name="_variable_a_"></a>

## \\_variable\\_A\\_

_DECLARATION_MEMBER_PARTIAL_

***

<a id="variableb" name="variableb"></a>

## variableB

_DECLARATION_MEMBER_PARTIAL_
"
`;

exports[`Groups should compile module index with namespaces index page: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../modules.md) / has-namespaces

# has-namespaces

A module that contains namespaces

## Index

### Namespaces

| Namespace | Description |
| :------ | :------ |
| [\\_Namespace\\_A\\_](namespaces/Namespace_A/index.md) | - |
| [NamespaceB](namespaces/NamespaceB.md) | - |

## Enumerations

### \\_Enum\\_A\\_

***

### EnumB

## Classes

### \\_\\_Class\\_A\\_

#### Constructors

##### new \\_\\_Class\\_A\\_()

_SIGNATURE_MEMBER_PARTIAL_

***

### ClassB

#### Constructors

##### new ClassB()

_SIGNATURE_MEMBER_PARTIAL_

## Interfaces

### \\_Interface\\_A\\_

***

### InterfaceB

## Type Aliases

### \\_Type\\_A\\_

_DECLARATION_MEMBER_PARTIAL_

***

### TypeB

_DECLARATION_MEMBER_PARTIAL_

## Variables

### \\_variable\\_A\\_

_DECLARATION_MEMBER_PARTIAL_

***

### variableB

_DECLARATION_MEMBER_PARTIAL_

## Functions

### \\_function\\_A\\_()

_SIGNATURE_MEMBER_PARTIAL_

***

### functionB()

_SIGNATURE_MEMBER_PARTIAL_
"
`;

exports[`Groups should compile module index with namespaces index page: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../index.md) / has-namespaces

# has-namespaces

A module that contains namespaces

## Index

### Namespaces

<table>
<thead>
<tr>
<th align="left">Namespace</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[\\_Namespace\\_A\\_](namespaces/Namespace_A/index.md)

</td>
<td>

&hyphen;

</td>
</tr>
<tr>
<td>

[NamespaceB](namespaces/NamespaceB.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

<a id="_enum_a_" name="_enum_a_"></a>

## \\_Enum\\_A\\_

***

<a id="enumb" name="enumb"></a>

## EnumB

***

<a id="__class_a_" name="__class_a_"></a>

## \\_\\_Class\\_A\\_

### Constructors

<a id="constructors" name="constructors"></a>

#### new \\_\\_Class\\_A\\_()

_SIGNATURE_MEMBER_PARTIAL_

***

<a id="classb" name="classb"></a>

## ClassB

### Constructors

<a id="constructors-1" name="constructors-1"></a>

#### new ClassB()

_SIGNATURE_MEMBER_PARTIAL_

***

<a id="_interface_a_" name="_interface_a_"></a>

## \\_Interface\\_A\\_

***

<a id="interfaceb" name="interfaceb"></a>

## InterfaceB

***

<a id="_type_a_" name="_type_a_"></a>

## \\_Type\\_A\\_

_DECLARATION_MEMBER_PARTIAL_

***

<a id="typeb" name="typeb"></a>

## TypeB

_DECLARATION_MEMBER_PARTIAL_

***

<a id="_variable_a_" name="_variable_a_"></a>

## \\_variable\\_A\\_

_DECLARATION_MEMBER_PARTIAL_

***

<a id="variableb" name="variableb"></a>

## variableB

_DECLARATION_MEMBER_PARTIAL_

***

<a id="_function_a_" name="_function_a_"></a>

## \\_function\\_A\\_()

_SIGNATURE_MEMBER_PARTIAL_

***

<a id="functionb" name="functionb"></a>

## functionB()

_SIGNATURE_MEMBER_PARTIAL_
"
`;

exports[`Groups should compile readme for a project: (Output File Strategy "modules") (Option Group "1") 1`] = `
"**typedoc-stubs** • [**Docs**](modules.md)

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;

exports[`Groups should compile references group page: (Output File Strategy "modules") (Option Group "1") 1`] = `
"[**typedoc-stubs**](index.md) • **Docs**

***

[typedoc-stubs](modules.md) / has-references

# has-references

A module that contains references

## Functions

### defaultFunction()

_SIGNATURE_MEMBER_PARTIAL_

## References

### default

Renames and re-exports [defaultFunction](has-references.md#defaultfunction)

### InterfaceA

Re-exports [InterfaceA](basic.md#interfacea)

### RenamedInterfaceB

Renames and re-exports [InterfaceB](basic.md#interfaceb)
"
`;

exports[`Groups should compile references group page: (Output File Strategy "modules") (Option Group "2") 1`] = `
"[**typedoc-stubs**](index.md) • **Docs**

***

[typedoc-stubs](index.md) / has-references

# has-references

A module that contains references

<a id="defaultfunction" name="defaultfunction"></a>

## defaultFunction()

_SIGNATURE_MEMBER_PARTIAL_

***

<a id="default" name="default"></a>

## default

Renames and re-exports [defaultFunction](has-references.md#defaultfunction)

<a id="interfacea" name="interfacea"></a>

## InterfaceA

Re-exports [InterfaceA](basic.md#interfacea)

<a id="renamedinterfaceb" name="renamedinterfaceb"></a>

## RenamedInterfaceB

Renames and re-exports [InterfaceB](basic.md#interfaceb)
"
`;

exports[`Groups should compile references index page: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../modules.md) / has-references

# has-references

A module that contains references

## Index

### Functions

| Function | Description |
| :------ | :------ |
| [defaultFunction](functions/defaultFunction.md) | - |

## References

### default

Renames and re-exports [defaultFunction](functions/defaultFunction.md)

***

### InterfaceA

Re-exports [InterfaceA](../basic/interfaces/InterfaceA.md)

***

### RenamedInterfaceB

Renames and re-exports [InterfaceB](../basic/interfaces/InterfaceB.md)
"
`;

exports[`Groups should compile references index page: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**typedoc-stubs**](../index.md) • **Docs**

***

[typedoc-stubs](../index.md) / has-references

# has-references

A module that contains references

## Index

### Functions

<table>
<thead>
<tr>
<th align="left">Function</th>
<th align="left">Description</th>
</tr>
</thead>
<tbody>
<tr>
<td>

[defaultFunction](functions/defaultFunction.md)

</td>
<td>

&hyphen;

</td>
</tr>
</tbody>
</table>

<a id="default" name="default"></a>

## default

Renames and re-exports [defaultFunction](functions/defaultFunction.md)

***

<a id="interfacea" name="interfacea"></a>

## InterfaceA

Re-exports [InterfaceA](../basic/interfaces/InterfaceA.md)

***

<a id="renamedinterfaceb" name="renamedinterfaceb"></a>

## RenamedInterfaceB

Renames and re-exports [InterfaceB](../basic/interfaces/InterfaceB.md)
"
`;
